Modernized this for real world usage

--- a/controllers/locations/config_relation.yaml
+++ b/controllers/locations/config_relation.yaml
@@ -3,7 +3,7 @@
 # ===================================
 
 locations:
-    label: ' '
+    label: 'Location'
     view:
         list: $/albrightlabs/clientlocations/models/location/columns.yaml
         toolbarButtons: create|delete
